--- a/docs/_layouts/awt.html
+++ b/docs/_layouts/awt.html
@@ -24,9 +24,9 @@
   <link rel="shortlink" href="https://www.fai.org/node/179965" />
 -->
   <title>Acro World Tour Final, Live Score</title>
-  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai2.css' | absolute_url }}" media="all" />
-  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai1.css' | absolute_url }}" media="all" />
-  <style>
+  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai2.css' | absolute_url }}" media="screen" />
+  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai1.css' | absolute_url }}" media="screen" />
+  <style media="screen">
 @-webkit-keyframes uil-ring-anim{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}}
 @-moz-keyframes uil-ring-anim{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}}
 @-webkit-keyframes uil-ring-anim{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}}
@@ -35,8 +35,9 @@
 .uil-ring-css{background:none;position:relative;width:200px;height:200px;}
 .uil-ring-css > div{position:absolute;display:block;width:160px;height:160px;top:20px;left:20px;border-radius:80px;box-shadow:0 3px 0 0 #59ebff;-webkit-transform-origin:80px 81.5px;transform-origin:80px 81.5px;-webkit-animation:uil-ring-anim 1s linear infinite;animation:uil-ring-anim 1s linear infinite;}
   </style>
-  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai3.min.css' | absolute_url }}" media="all" />
+  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai3.min.css' | absolute_url }}" media="screen" />
   <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai-awt.css' | absolute_url }}" media="all" />
+  <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai-awt-print.css' | absolute_url }}" media="print" />
   <script src="{{ 'assets/js/jquery.min.js' | absolute_url }}"></script>
   <script src="{{ 'assets/js/jquery.mousewheel.min.js' | absolute_url }}"></script>
   <script src="{{ 'assets/js/fai.js' | absolute_url }}"></script>
