--- a/docs/_layouts/awt.html
+++ b/docs/_layouts/awt.html
@@ -6,6 +6,14 @@
   <!--[if (gte IE 9)|(gt IEMobile 7)]><html class="no-js ie" lang="en" dir="ltr"><![endif]-->
   <!--[if !IE]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1246059-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-1246059-5');
+  </script>
   <meta charset="utf-8" />
   <meta http-equiv="cleartype" content="on" />
   <meta name="MobileOptimized" content="width" />
