--- a/docs/_layouts/awt.html
+++ b/docs/_layouts/awt.html
@@ -124,6 +124,7 @@
   <script src="{{ 'assets/js/jquery-3.3.1.min.js' | absolute_url }}"></script>
   <script src="{{ 'assets/js/svg.min.js' | absolute_url }}"></script>
   <script src="{{ 'assets/js/papaparse.min.js' | absolute_url }}"></script>
+  <script src="{{ 'assets/js/awt.js' | absolute_url }}"></script>
   <script src="{{ 'assets/js/' | append: page.js | append: '.js' | absolute_url }}"></script>
 </body>
 </html>
