initial release for master acro

--- a/docs/_includes/awt/finals-results.html
+++ b/docs/_includes/awt/finals-results.html
@@ -6,18 +6,14 @@
         <li id="result-p2">Loser F1</li>
         <li id="result-p3">Winner F3</li>
         <li id="result-p4">Loser F3</li>
-        <li id="result-p5">Winner F5</li>
-        <li id="result-p6">Loser F5</li>
-        <li id="result-p7">Winner F7</li>
-        <li id="result-p8">Loser F7</li>
-        <li id="result-p9">Winner F9</li>
-        <li id="result-p10">Loser F9</li>
-        <li id="result-p11">Winner F11</li>
-        <li id="result-p12">Loser F11</li>
-        <li id="result-p13">Winner F13</li>
-        <li id="result-p14">Loser F13</li>
-        <li id="result-p15">Winner F15</li>
-        <li id="result-p16">Loser F15</li>
+        <li id="result-p5">5th</li>
+        <li id="result-p6">6th</li>
+        <li id="result-p7">7th</li>
+        <li id="result-p8">8th</li>
+        <li id="result-p9">9th</li>
+        <li id="result-p10">10th</li>
+        <li id="result-p11">11th</li>
+        <li id="result-p12">12th</li>
       </ol>
     </div>
   </section>
