--- a/docs/_layouts/awt.html
+++ b/docs/_layouts/awt.html
@@ -30,7 +30,7 @@
   <link rel="canonical" href="https://www.fai.org/news/eyes-skies-acro-world-tour-2018-final" />
   <link rel="shortlink" href="https://www.fai.org/node/179965" />
 -->
-  <title>Acro World Tour Final, Live Score</title>
+  <title>Master Acro 2018, Live Score</title>
   <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai2.css' | absolute_url }}" media="screen" />
   <link type="text/css" rel="stylesheet" href="{{ 'assets/css/fai1.css' | absolute_url }}" media="screen" />
   <style media="screen">
@@ -84,11 +84,11 @@
       <div class="breadcrumb-wrapper">
         <div class="panel-pane pane-page-breadcrumb">
           <ul class="breadcrumb">
-            <li class="bc-2 last"><span><span class="nolink">24-26th August at Sonchaux Acroshow</span></span></li>
+            <li class="bc-2 last"><span><span class="nolink">25-28th October at La Reunion</span></span></li>
           </ul>
         </div>
         <div class="panel-pane pane-page-title">
-          <h1>Acro World Tour 2018 Final</h1>
+          <h1>Master Acro 2018</h1>
         </div>
       </div>
 
