--- a/docs/_includes/awt/qualification-results.html
+++ b/docs/_includes/awt/qualification-results.html
@@ -1,5 +1,5 @@
   <section id="qualification-results" class="page">
-    <h1>Qualification results</h1>
+    <h1>Qualifications results</h1>
     <div class="results">
       <div id="results-group-A" class="group">
         <h3>A</h3>
