--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -22,3 +22,11 @@ section.page {
 #finals-9-16 {
   display: none;
 }
+
+.winner {
+  color: $color-winner;
+}
+
+.loser {
+  color: $color-loser;
+}
