remove scores in qlf table

--- a/docs/_includes/awt/qualification-table.html
+++ b/docs/_includes/awt/qualification-table.html
@@ -4,21 +4,21 @@
       <table id="results-qlf-groupA">
         <thead>
           <tr>
-            <th>Group&nbsp;A</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th><th>Average Score</th>
+            <th>Group&nbsp;A</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th>
           </tr>
         </thead>
         <tbody>
           <tr id="pilotA1">
-            <th class="name">1st Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">1st Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotA2">
-            <th class="name">2nd Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">2nd Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotA3">
-            <th class="name">3rd Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">3rd Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotA4">
-            <th class="name">4th Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">4th Group A</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
         </tbody>
       </table>
@@ -26,21 +26,21 @@
       <table id="results-qlf-groupC">
         <thead>
           <tr>
-            <th>Group&nbsp;C</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th><th>Average Score</th>
+            <th>Group&nbsp;C</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th>
           </tr>
         </thead>
         <tbody>
           <tr id="pilotC1">
-            <th class="name">1st Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">1st Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotC2">
-            <th class="name">2md Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">2md Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotC3">
-            <th class="name">3rd Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">3rd Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotC4">
-            <th class="name">4th Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">4th Group C</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
       </tbody>
       </table>
@@ -49,21 +49,21 @@
       <table id="results-qlf-groupR">
         <thead>
           <tr>
-            <th>Group&nbsp;R</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th><th>Average Score</th>
+            <th>Group&nbsp;R</th><th>Run&nbsp;1</th><th>Run&nbsp;2</th><th>Run&nbsp;3</th>
           </tr>
         </thead>
         <tbody>
           <tr id="pilotR1">
-            <th class="name">1st Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">1st Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotR2">
-            <th class="name">2nd Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">2nd Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotR3">
-            <th class="name">3rd Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">3rd Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
           <tr id="pilotR4">
-            <th class="name">4th Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td><td class="average">-</td>
+            <th class="name">4th Group R</th><td class="run1">-</td><td class="run2">-</td><td class="run3">-</td>
           </tr>
       </tbody>
       </table>
