--- a/docs/_layouts/awt.html
+++ b/docs/_layouts/awt.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon-precomposed" href="{{ 'assets/favicons/apple-touch-icon-precomposed.png' | absolute_url }}" />
   <link rel="profile" href="http://www.w3.org/1999/xhtml/vocab" />
   <link rel="shortcut icon" href="{{ 'assets/favicons/favicon.ico' | absolute_url }}" type="image/vnd.microsoft.icon" />
-  <meta name="description" content="After 3 qualification stages, the very best acro paragliders in the world will compete at the Sonchaux Acroshow, to be held at Villeneuve, Switzerland from 24-26th August. Follow the live event here !" />
+  <meta name="description" content="Master Acro, 25th-28th of October in Saint Leu, La Reunion. Acro paragliding tournament gathering 12 of the best pilots of the world. Follow the live event here !" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
